tests/script_errors/imut_bad_drop/error.txt
Error: 
    1 | match "dont-care" of
    2 |   case "dont-care" when drop
      |                         ^^^^ Found the token `drop` but expected one of `!`, `\``, `$`, `(`, `+`, `-`, `<ident>`, `[`, `absent`, `args`, `bool`, `event`, `float`, `for`, `group`, `heredoc`, `int`, `match`, `merge`, `nil`, `not`, `patch`, `present`, `window`, `{`
    3 |   default => "ouch"
    4 | end